<resources>
    <string name="app_name">MedScape</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="logo">Logo</string>
    <string name="phone">Phone</string>
    <string name="forgetPassword">ForgetPassword</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enterValidPhone">Enter a valid Phone</string>
    <string name="pleaseEnterOTP">Please Enter OTP</string>
    <string name="otpSentTo">OTP sent to</string>
    <string name="EnterTheRecievedOtp">Enter the recieved OTP</string>
    <string name="verify">Verify</string>
    <string name="noOtp">Resend OTP</string>
    <string name="SomeError">Unfortunate Error!</string>
    <string name="feedBackLink">https://docs.google.com/forms/d/e/1FAIpQLScu9FNugIxScMI_VKTzIY1X41u7SuRQqI9_3ZS-kXsMoiMl4w/viewform</string>
    <string name="indiaPod">https://www.indiaopd.com/</string>
    <string name="remedy">MedScape Remedies</string>
    <string name="noListFound">No remedy found</string>
    <string name="findDoctors">Find Doctors</string>
    <string name="remind">Remind me</string>
    <string name="moreHelp">More Help</string>
    <string name="splashBottom">Your personal medical diagnosis tool</string>
    <string name="terms">Welcome to Medscape!\nThese terms and conditions outline the rules and regulations for the use of Medscape\'s Website, located at medscape.
By accessing this website we assume you accept these terms and conditions. Do not continue to use medscape if you do not agree to take all of the terms and conditions stated on this page.
The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: Client, You and Your refers to you, the person log on this website and compliant to the Company\'s terms and conditions. The Company, Ourselves, We, Our and Us, refers to our Company. , Parties, or Us, refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client\'s needs in respect of provision of the Company\'s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.Cookies
We employ the use of cookies. By accessing medscape, you agreed to use cookies in agreement with the Medscape\'s Privacy Policy.Most interactive websites use cookies to let us retrieve the user\'s details for each visit. Cookies are used by our website to enable the functionality of certain areas to make it easier for people visiting our website. Some of our affiliate/advertising partners may also use cookies This application is not a substitute for medical advice .users of these applications should consult their health care professional before making any health / medical decision based upon the data contained here in . Thus, any data provided by the Users or the medscap belong exclusively to them. Therefore, medscape,  cannot be held liable for any event occurred relating to such data.
Despite the fact that medscape does not own any of such data shared by the Users the app has applied all the measures required for the “high-security-level-files” by the Organic Law 15/1999 on Protection of Personal Data, in order to grant the protection of the data and information of the Users and medscape</string>
    <string name="phone_number">Phone Number</string>
</resources>
