<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:indeterminate="true"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tenDp"
            android:text="@string/pleaseEnterOTP"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/tenDp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="226dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otpEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/tenDp"
                android:layout_marginStart="@dimen/tenDp"
                android:layout_weight="0.9"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/oxygen"
                android:hint="@string/EnterTheRecievedOtp"
                android:inputType="number"
                android:padding="@dimen/tenDp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/verifyButton"
                android:layout_marginHorizontal="@dimen/tenDp"
                android:text="@string/verify" />

        </LinearLayout>

        <TextView
            android:id="@+id/resendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/twentyDp"
            android:layout_marginVertical="@dimen/tenDp"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/tenDp"
            android:paddingHorizontal="@dimen/twentyDp"
            android:text="@string/noOtp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="226dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>