<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    tools:context=".login.LoginFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/progressColor" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBar"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSurface"
                app:elevation="0dp" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buttonLL"
            android:layout_below="@id/appBarLayout"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/loginForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageLogo"
                    android:layout_width="231dp"
                    android:layout_height="252dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/phone_auth" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/raleway_medium"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="35sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/raleway_medium"
                    android:text="Please Enter Your Phone No to Login &amp; Register"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="1">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/countryCodePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.1"
                        android:paddingEnd="-10dp"
                        app:ccpDialog_allowSearch="false"
                        app:ccpDialog_showFlag="true"
                        app:ccpDialog_textColor="@color/black"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_autoDetectLanguage="true"
                        app:ccp_contentColor="@color/black"
                        app:ccp_showPhoneCode="false"
                        app:ccp_textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/phoneLayout"
                        app:layout_constraintEnd_toEndOf="@+id/phoneLayout"
                        app:layout_constraintStart_toStartOf="@+id/phoneLayout" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0.9"
                        android:hint="@string/phone_number"
                        android:padding="@dimen/tenDp"
                        app:boxStrokeColor="@color/light_blue"
                        app:counterEnabled="true"
                        app:counterMaxLength="10"
                        app:hintTextColor="@color/light_blue">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPhoneLogin"
                            android:layout_width="273dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:fontFamily="@font/oxygen"
                            android:inputType="phone"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="383dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"

                    android:fontFamily="@font/raleway_medium"
                    android:text="An OTP Will be sent to via SMS to verify your Phone Number"
                    android:textColor="@color/grey_800"
                    android:textSize="12sp" />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/buttonLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/dark_blue"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:paddingHorizontal="80dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="0dp" />
        </LinearLayout>
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

